--- a/src/styles/contactus.scss
+++ b/src/styles/contactus.scss
@@ -79,9 +79,7 @@
   font-weight: bolder;
   margin-bottom: 2em;
 }
-.contact__card__row__wraper__col__form__input {
-  margin: 0.6em 0;
-}
+
 .contact__card__col__form__heading {
   font-size: 2rem;
   font-weight: bolder;
@@ -92,11 +90,14 @@
 }
 .contact__card__row__wraper__col__form__input {
   width: 100%;
+  margin: 0.6em 0;
+  position: relative;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
 }
+
 .contact__card__row__wraper__col__form__input input {
   width: 100%;
   background-color: transparent;
@@ -104,7 +105,24 @@
   border-bottom: 1px solid #787878;
   outline: none;
   color: #c1c1c1;
+  background-color: transparent;
   padding-bottom: 0.5em;
+}
+.contact__card__row__wraper__col__form__input__textarea {
+  width: 100%;
+  background-color: transparent;
+  border: transparent;
+  border-bottom: 1px solid #787878;
+  outline: none;
+  border: 1px solid #787878;
+  border-radius: 7px;
+  color: #c1c1c1;
+  padding-bottom: 0.5em;
+  overflow: hidden;
+  resize: none;
+  height: 150px;
+  padding: 1em;
+  margin-top: 0.5em;
 }
 .contact__card__row__wraper__col__form__input input::placeholder {
   color: #c1c1c1;
@@ -126,10 +144,13 @@
   z-index: 1;
   transition: 300ms ease-in-out;
   border-radius: 20px;
+  color: white;
 }
 .contact__card__row__wraper__col__form__btn__text:hover {
   cursor: pointer;
   color: rgb(137, 120, 248);
+  border: 1px solid rgb(137, 120, 248);
+  border: none;
   transition: 300ms ease-in-out;
 }
 .contact__card__row__wraper__col__form__btn__text:hover
@@ -182,6 +203,14 @@
 }
 .contact__card__col__right__address__svg {
   margin-right: 1em;
+}
+.alert__error__input {
+  color: rgb(221, 75, 75);
+  font-size: 12px;
+  margin: 0;
+  position: absolute;
+  right: 0;
+  top: -1em;
 }
 @media (max-width: 1250px) {
   .contact__card__row__wraper__col__left {
