--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   padding: 0em 4em;
   flex-direction: column;
-  margin-top: 100px;
+  margin: 2em 0em;
   height: 730px;
   overflow: auto;
   margin-bottom: 2em;
@@ -157,6 +157,59 @@
     }
   }
 }
+
+.upper__text__wraper {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  justify-content: space-between;
+  margin-bottom: 2em;
+  flex-direction: column;
+  max-width: 1366px;
+  margin: 0 auto;
+}
+.upper__text__wraper__text {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  // padding: 4em 4em 0em 4em;
+  margin-top: 4em;
+  padding: 0 4em;
+}
+.upper__text__wraper__heading {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: normal;
+  background: linear-gradient(90deg, #1dbef5 0%, #5846c7 96.15%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.upper__text__wraper__sub__heading {
+  font-size: 45px;
+  font-weight: bolder;
+  line-height: 1.5;
+  color: white;
+  width: 100%;
+}
+@media (max-width: 850px) {
+  .upper__text__wraper__text {
+    padding: 2em;
+  }
+  .projects {
+    padding: 0 2em;
+  }
+}
+@media (max-width: 700px) {
+  .projects {
+    margin: 2em 0em;
+  }
+
+  .upper__text__wraper__sub__heading {
+    font-size: 30px;
+  }
+}
 @media (max-width: 500px) {
   .projects {
     display: flex;
@@ -164,8 +217,7 @@
     padding-left: 10px;
     padding-right: 10px;
     flex-direction: column;
-    margin-top: 100px;
-
+    margin-top: 30px;
     .body {
       max-width: 1400px;
       width: 100%;
@@ -227,48 +279,5 @@
     .cursorLabel {
       background-color: transparent;
     }
-  }
-}
-.upper__text__wraper {
-  width: 100%;
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  justify-content: space-between;
-  margin-bottom: 2em;
-  flex-direction: column;
-  max-width: 1366px;
-  margin: 0 auto;
-}
-.upper__text__wraper__text {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  padding: 4em;
-}
-.upper__text__wraper__heading {
-  font-size: 16px;
-  font-weight: 700;
-  line-height: normal;
-  background: linear-gradient(90deg, #1dbef5 0%, #5846c7 96.15%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.upper__text__wraper__sub__heading {
-  font-size: 55px;
-  font-weight: bolder;
-  line-height: 1.5;
-  color: white;
-  width: 100%;
-  max-width: 600px;
-}
-@media (max-width: 700px) {
-  .upper__text__wraper__text {
-    padding: 2em;
-  }
-  .upper__text__wraper__sub__heading {
-    font-size: 30px;
-    padding: 0em 2em;
   }
 }
