--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -48,10 +48,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: black;
   }
 
   .modal img {
     height: auto;
+    background-color: transparent;
   }
 
   .cursor,
