--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -200,6 +200,7 @@
   }
   .projects {
     padding: 2em;
+    height: 960px;
   }
 }
 @media (max-width: 700px) {
@@ -211,7 +212,7 @@
   .projects {
     display: flex;
     align-items: center;
-
+    height: 1200px;
     flex-direction: column;
     margin-top: 30px;
     .body {
