header section done

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -15,7 +15,7 @@
   transition: 300ms ease-in-out;
 }
 .nav__bar__wraper__active {
-  background-color: rgba(101, 84, 220, 1);
+  background-color: black;
   top: 0;
   padding: 0.5em 4em;
   border-bottom-left-radius: 20px;
