about text done

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
   max-width: 1366px;
   margin: 0 auto;
-  // padding: 0 4em;
+  padding: 0 1em;
 }
 .footer__testim__wrapaer {
   width: 100%;
