--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,7 +23,7 @@ body {
   margin: 1em;
 }
 .main__header__container {
-  padding: 7em 4em;
+  padding: 7em 2em;
   width: 100%;
   max-width: 1366px;
   margin: 0 auto;
@@ -96,7 +96,7 @@ body {
   max-width: 1366px;
   margin: 0 auto;
   margin-top: 14em;
-  padding: 0 4em;
+  padding: 0 2em;
 }
 .about__contaner__text {
   display: flex;
@@ -152,7 +152,7 @@ body {
   width: 100%;
   max-width: 1366px;
   margin: 0 auto;
-  padding: 2em 4em;
+  padding: 2em;
   margin-top: 12em;
 }
 .services__container__main__wraper {
