--- a/src/styles/contactus.scss
+++ b/src/styles/contactus.scss
@@ -63,7 +63,7 @@
   justify-content: flex-start;
   border-radius: 39px;
   background: #232323;
-  padding: 1.5em 2em;
+  padding: 2.9em 2em;
 }
 .contact__card__row__wraper__col__form {
   width: 100%;
@@ -80,16 +80,23 @@
 }
 
 .contact__card__col__form__heading {
-  font-size: 2rem;
-  font-weight: bolder;
+  font-size: 35px;
+  font-weight: 400;
+  color: #c1c1c1;
+}
+.contact__card__col__form__heading span {
+  color: #c1c1c1;
+  font-size: 40px;
+  font-weight: 700;
 }
 .contact__card__col__form__sub__heading {
-  font-size: 1rem;
-  margin-top: 6px;
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 10px;
 }
 .contact__card__row__wraper__col__form__input {
   width: 100%;
-  margin: 0.6em 0;
+  margin: 1.4em 0;
   position: relative;
   display: flex;
   align-items: flex-start;
@@ -108,6 +115,9 @@
 }
 .contact__card__row__wraper__col__form__input input:focus {
   background-color: transparent;
+}
+.contact__card__row__wraper__col__form__input input::placeholder {
+  font-size: 16px;
 }
 // input:-webkit-autofill,
 // input:-webkit-autofill:hover,
