--- a/src/styles/meal.scss
+++ b/src/styles/meal.scss
@@ -145,6 +145,7 @@
 }
 .project__main__full__img {
   width: 100%;
+  margin: 2em 0;
 }
 .project__main__full__img img {
   width: 100%;
@@ -392,7 +393,134 @@
   margin: 0.5em 0;
   max-width: 350px;
 }
+.get__demo__main__container {
+  width: 100%;
+  max-width: 1366px;
+  margin: 0 auto;
+  padding: 4em 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.get__demo__main__container__left {
+  width: 50%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.get__demo__main__container__left__img {
+  width: 100%;
+  max-width: 500px;
+}
+.get__demo__main__container__right {
+  width: 50%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  color: white;
+  // max-width: 700px;
+  padding: 2em;
+}
+.get__demo__main__container__right__heading {
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 50px;
+}
+.get__demo__main__container__right__subheading {
+  font-size: 16px;
+  font-weight: 400;
+  color: #a1a1aa;
+  margin: 1em 0;
+}
+.get__demo__main__container__right__mail__wraper__bg__over {
+  width: 100%;
+  position: relative;
+}
+.get__demo__main__container__right__mail__wraper__bg svg {
+  width: 100%;
+}
+.get__demo__main__container__right__mail__wraper {
+  margin-top: 2em;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 3em;
+  left: 0;
+}
+.get__demo__main__container__right__mail__wraper__title {
+  font-size: 14px;
+  font-weight: 700;
+  padding: 0.5em 0;
+}
+.get__demo__main__container__right__mail__wraper__input__wraper {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: #18181b;
+  border-radius: 10px;
+}
+.get__demo__main__container__right__mail__wraper__input {
+  background-color: transparent;
+  width: 100%;
+  outline: none;
+  border: none;
+  color: white;
+  padding: 1em 2em;
+  font-size: 16px;
+}
+.get__demo__main__container__right__mail__wraper__input::placeholder {
+  color: #a1a1aa;
+  font-size: 16px;
+}
+.get__demo__main__container__right__mail__wraper__input:focus {
+  outline: none;
+}
+.get__demo__main__container__right__mail__wraper__input__button {
+  width: 100%;
+  max-width: 170px;
+  background-color: white;
+  border-radius: 12px;
+  padding: 1em;
+  margin: 8px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #353434;
+  transition: 300ms ease-in-out;
+}
+.get__demo__main__container__right__mail__wraper__input__button:hover {
+  background-color: #00ce6e;
+  color: rgb(245, 243, 243);
+  transition: 300ms ease-in-out;
+}
+@media (max-width: 1100px) {
+  .get__demo__main__container {
+    flex-direction: column;
+  }
+  .get__demo__main__container__right {
+    width: 100%;
+    padding: 0em;
+    padding-top: 3em;
+  }
+  .get__demo__main__container__left {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
 @media (max-width: 900px) {
+  .get__demo__main__container__right__heading {
+    font-size: 35px;
+  }
+  .get__demo__main__container {
+    padding: 0em 2em;
+  }
   .result__container__text__wraper {
     width: 45%;
     padding: 1em;
@@ -416,6 +544,12 @@
   }
 }
 @media (max-width: 800px) {
+  .get__demo__main__container__right__mail__wraper__input__button {
+    font-size: 14px;
+  }
+  .get__demo__main__container__right__mail__wraper__input {
+    // padding: 1em;
+  }
   .guide__section__card__font__left {
     width: 100%;
   }
