--- a/src/styles/meal.scss
+++ b/src/styles/meal.scss
@@ -88,11 +88,15 @@
   line-height: 1.2;
   margin-bottom: 0.5em;
 }
-.project__header__imags__slider {
+.project__header__imags__slider__over {
   width: 100%;
-  max-width: 1366px;
-  margin: 0 auto;
-  padding: 0 2em;
+  display: flex;
+  justify-content: flex-end;
+}
+.project__header__imags__slider {
+  width: 90%;
+  // max-width: 1366px;
+  // margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -103,9 +107,9 @@
   margin-left: 2em;
 }
 .project__header__imags__slider__card img {
+  height: 600px;
   width: 100%;
-  max-width: 350px;
-  object-fit: cover;
+  border-radius: 20px;
 }
 .meal__about__container {
   width: 100%;
@@ -546,9 +550,6 @@
 @media (max-width: 800px) {
   .get__demo__main__container__right__mail__wraper__input__button {
     font-size: 14px;
-  }
-  .get__demo__main__container__right__mail__wraper__input {
-    // padding: 1em;
   }
   .guide__section__card__font__left {
     width: 100%;
